Landing page updates

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               Sign in
             </a>
             <a class="start-trail-btn btn focus-reset" href="#">
-              Start free trail
+              Test Our Software
             </a>
           </div>
           <!-- mobile menu trigger -->
