--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
         <div class="row position-relative justify-content-center">
           <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-11 order-lg-1 order-1" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
             <div class="content text-center">
-              <h1>Manage your team, faster!</h1>
-              <p>Create custom landing pages with Shade that convert more visitors than any website.</p>
-              <a href="#" class="btn">Start free 14 days trial</a>
+              <h1>Enjoy Music Production & Audio Engineering!</h1>
+              <p>Create Hit songs, movie soundtracks and amazing mixes with our Audio Engineering 
+                Software. Clint Tools, Advanced Audio Production Software.</p>
+              <a href="#" class="btn">Start free 30 days trial</a>
               <span>No credit card required</span>
             </div>
           </div>
