--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="row position-relative justify-content-center">
           <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-11 order-lg-1 order-1" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
             <div class="content text-center">
-              <h1>Enjoy Music Production & Audio Engineering!</h1>
+              <h1>Enjoy Music Production & Audio Post Production with Clint Tools!</h1>
               <p>Create Hit songs, movie soundtracks and amazing mixes with our Audio Engineering 
                 Software. Clint Tools, Advanced Audio Production Software.</p>
               <a href="#" class="btn">Start a free 30 days trial</a>
