--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <h1>Enjoy Music Production & Audio Post Production with Clint Tools!</h1>
               <p>Create Hit songs, movie soundtracks and amazing mixes with our Audio Engineering 
                 Software. Clint Tools, Advanced Audio Production Software.</p>
-              <a href="#" class="btn">Start a free 30 days trial</a>
+              <a href="#" class="btn">Start your free 30 days trial</a>
               <span>No credit card required</span>
             </div>
           </div>
