--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Clint Tools </title>
+  <title>Desktop App </title>
   <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
   <!-- Bootstrap , fonts & icons  -->
   <link rel="stylesheet" href="./css/bootstrap.css">
@@ -91,7 +91,7 @@
               Sign in
             </a>
             <a class="start-trail-btn btn focus-reset" href="#">
-              Try Clint Tools
+              Start free trail
             </a>
           </div>
           <!-- mobile menu trigger -->
@@ -109,10 +109,9 @@
         <div class="row position-relative justify-content-center">
           <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-11 order-lg-1 order-1" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
             <div class="content text-center">
-              <h1>Enjoy Music Production & Audio Post Production with Clint Tools!</h1>
-              <p>Create Hit songs, movie soundtracks and amazing mixes with our Audio Engineering 
-                Software. Clint Tools, Advanced Audio Production Software.</p>
-              <a href="#" class="btn">Start your free 30 days trial</a>
+              <h1>Manage your team, faster!</h1>
+              <p>Create custom landing pages with Shade that convert more visitors than any website.</p>
+              <a href="#" class="btn">Start free 14 days trial</a>
               <span>No credit card required</span>
             </div>
           </div>
