--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Desktop App </title>
+  <title>Clint Tools </title>
   <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
   <!-- Bootstrap , fonts & icons  -->
   <link rel="stylesheet" href="./css/bootstrap.css">
@@ -91,7 +91,7 @@
               Sign in
             </a>
             <a class="start-trail-btn btn focus-reset" href="#">
-              Start free trail
+              Start your 30 days free trial
             </a>
           </div>
           <!-- mobile menu trigger -->
@@ -109,9 +109,10 @@
         <div class="row position-relative justify-content-center">
           <div class="col-xxl-6 col-xl-7 col-lg-8 col-md-11 order-lg-1 order-1" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
             <div class="content text-center">
-              <h1>Manage your team, faster!</h1>
-              <p>Create custom landing pages with Shade that convert more visitors than any website.</p>
-              <a href="#" class="btn">Start free 14 days trial</a>
+              <h1>Create music, movie soundtracks and creative sounds!</h1>
+              <p>Clint Tools DAW is an advanced audio production software that will carter for 
+                all your audio production need.</p>
+              <a href="#" class="btn">Start your 30 days trial now!</a>
               <span>No credit card required</span>
             </div>
           </div>
@@ -132,9 +133,9 @@
               <div class="circle-dot-1">
                 <i class="fas fa-circle"></i>
               </div>
-              <h4>Single Platform</h4>
-              <p>Create custom landing pages with
-                Shade that convert more visitors than any website.</p>
+              <h4>Made by Africa for Africa</h4>
+              <p>Create African music with African sounds. 
+                Sounds that were there before and and continue being enjoyed.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-9">
@@ -142,9 +143,9 @@
               <div class="circle-dot-2">
                 <i class="fas fa-circle"></i>
               </div>
-              <h4>Faster Communication</h4>
-              <p>Create custom landing pages with
-                Shade that convert more visitors than any website.</p>
+              <h4>All genre friendly</h4>
+              <p>Create from professionally made templates. 
+                Clint Tools DAW has pre-made templates for all the genres of your choice.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-9">
@@ -152,9 +153,9 @@
               <div class="circle-dot-3">
                 <i class="fas fa-circle"></i>
               </div>
-              <h4>Everything in One Place</h4>
-              <p>Create custom landing pages with
-                Shade that convert more visitors than any website.</p>
+              <h4>Everything in one DAW</h4>
+              <p>With Clint Tools, you'll create beats, record audio, mix audio, 
+                create movie soundtracks and much more.</p>
             </div>
           </div>
         </div>
@@ -178,11 +179,12 @@
               </div>
               <div class="offset-xxl-1 col-xxl-5 col-xl-6 col-lg-6 col-md-8" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
                 <div class="content section-heading-11">
-                  <h2> Manage everything faster in single place.</h2>
-                  <p>Create custom landing pages with
-                    Shade that convert more visitors than any website. With lots of unique blocks, you can easily build a
-                    page without coding.</p>
-                  <a href="#" class="btn focus-reset">Start free 14 days trial</a>
+                  <h2> Create, Record, Mix and Master just in one DAW </h2>
+                  <p>Clint Tools enables you create music, record audio, foley sounds,
+                    mix and master them all into one master track. The DAW is African based 
+                    with a wide variety of African sounds that were there, are there 
+                    and will remain to be. Get your copy today and have fun with it.</p>
+                  <a href="#" class="btn focus-reset">Start your 30 days trial </a>
                 </div>
               </div>
             </div>
@@ -198,11 +200,21 @@
             <div class="row align-items-center justify-content-center">
               <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-8 order-lg-1 order-1" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
                 <div class="content section-heading-11">
-                  <h2> Manage everything faster in single place.</h2>
-                  <p>Create custom landing pages with
-                    Shade that convert more visitors than any website. With lots of unique blocks, you can easily build a
-                    page without coding.</p>
-                  <a href="#" class="btn focus-reset">Start free 14 days trial</a>
+                  <h2> Where it all began </h2>
+                  <p>For so many years, Kenya and many other African countries have relied on 
+                    forign countries for software among them being DAWs (Digital AUdio Workstations) 
+                    I thought of this idea of importing audio prouction software and an inspiration came to my 
+                    mind abount creating one for Africans with African sounds.</p>
+                    <p>Having interacted with a good number of other DAWs and having studied audio engineering 
+                      at ADMI (Africa Digital Media Institute), navigating through the process wasn't as hard as it looks like. 
+                      I got inspiration from Pro Tools, a monster DAW in the industry with a wide range of functionalities. 
+                      Also got a lot of ideas from Ableton Live as this is also one of my favorite DAWs. After collecting ideas and 
+                      compiling them, I had to look for a team to work with as this would involve a lot of work that on my own 
+                      wouldn't be so easy. </p>
+                      <p>In my team, I needed a graphics designer, a historian sound engineer, an instrumentalist audio engineer 
+                        and another software engineer (back-end developer) to assist with the work. Nyarangi Tirimba came in as our historian engineer, 
+                      Morgan Ambani as the instrumentalist audio engineer, Samuel Siambo as the graphics designer and Tirus as my co-developer. </p>
+                  <a href="#" class="btn focus-reset">Learn more about us</a>
                 </div>
               </div>
               <div class="offset-xxl-1 col-xxl-6 col-xl-6 col-lg-6 col-md-8 order-lg-1 order-0" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
