--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
             <div class="video-content text-center">
               <a data-fancybox="" href="https://www.youtube.com/embed/9yc1lfFZX-I"><i
               class="fas fa-play font-size-7"></i></a>
-              <h2>We help you to be successful</h2>
-              <p>Create custom landing pages with
-                Shade that convert more visitors than any website. With lots of unique blocks, you can easily build a page
-                without coding.</p>
+              <h2>Make use of our professionally pre-made templates</h2>
+              <p>Just a beginner music producer? No worries, we got you. With our pre-made templates, 
+                you can create hit songs of the genre of your choice. Just choose your genre and select a templates 
+                to guide you through the process. </p>
             </div>
           </div>
         </div>
@@ -255,9 +255,11 @@
         <div class="row justify-content-center">
           <div class="col-12 col-lg-8 text-center" data-aos="fade-down" data-aos-duration="800" data-aos-once="true">
             <div class="content section-heading-11">
-              <h2>Choose a plan to start</h2>
-              <p>Wireframes are generally created by business analysts, user experience designers, developers, visual
-                designers, and by those with expertise</p>
+              <h2>Choose a plan to buy</h2>
+              <p>Clint Tools enables you create music, record audio, foley sounds,
+                mix and master them all into one master track. The DAW is African based 
+                with a wide variety of African sounds that were there, are there 
+                and will remain to be. Get your copy today and have fun with it.</p>
             </div>
           </div>
         </div>
