--- a/index.html
+++ b/index.html
@@ -274,27 +274,28 @@
           <div class="col-xl-4 col-lg-5 col-md-6 col-sm-8">
             <div class="single-price" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
               <div class="price-top justify-content-between">
-                <span>Basic</span>
+                <span>Studio</span>
               </div>
               <div class="main-price">
                 <div class="price d-flex position-relative ">
                   <span class="d-inline-block dynamic-value">$</span>
-                  <h2 class="d-inline-block dynamic-value" data-active="15" data-monthly="19" data-yearly="199"><span
+                  <h2 class="d-inline-block dynamic-value" data-active="15" data-monthly="25" data-yearly="249"><span
                   class="dynamic-value" data-active="/ month" data-monthly="/ month" data-yearly="/year"></span></h2>
                 </div>
               </div>
-              <p>Good for small business launching their products less then once a year</p>
+              <p>Best suitable for audio production with upto 64 multi-track recording</p>
               <div class="price-body pt-8">
                 <ul class="pricing-list list-unstyled">
-                  <li> <i class="icon icon-check-2-2"></i> Unlimited Blocks</li>
-                  <li> <i class="icon icon-check-2-2"></i> 5GB Clould Storages</li>
-                  <li><del> <i class="icon icon-check-2-2"></i> Custom Domain Names</del></li>
-                  <li><del> <i class="icon icon-check-2-2"></i>Unlimited Emails</del></li>
+                  <li> <i class="icon icon-check-2-2"></i> 64 multi-track recording</li>
+                  <li> <i class="icon icon-check-2-2"></i> Upto 96kHz of sampling</li>
+                  <li> <i class="icon icon-check-2-2"></i> Collaboration with 2 others</li>
+                  <li> <i class="icon icon-check-2-2"></i> Limited templates</li>
+                  <li> <i class="icon icon-check-2-2"></i> Included plugins</li>
+                  <li> <i class="icon icon-check-2-2"></i> 2GB cloud storage</li>
                 </ul>
               </div>
               <div class="price-btn">
-                <a class="btn" href="#">Start free 14 days trial</a>
-                <p>No credit card required</p>
+                <a class="btn" href="#">Get your license now</a>
               </div>
             </div>
           </div>
@@ -306,22 +307,23 @@
               <div class="main-price">
                 <div class="price d-flex position-relative">
                   <span class="d-inline-block dynamic-value ">$</span>
-                  <h2 class="d-inline-block dynamic-value" data-active="15" data-monthly="29" data-yearly="299"> <span
+                  <h2 class="d-inline-block dynamic-value" data-active="15" data-monthly="39" data-yearly="399"> <span
                   class="dynamic-value" data-active="/  month" data-monthly="/ month" data-yearly="/year"></span></h2>
                 </div>
               </div>
-              <p>Good for small business launching their products less then once a year</p>
+              <p>Perfect choice for producers, sound designers and engineers</p>
               <div class="price-body">
                 <ul class="pricing-list list-unstyled">
-                  <li> <i class="icon icon-check-2-2"></i> Unlimited Blocks</li>
-                  <li> <i class="icon icon-check-2-2"></i> 5GB Clould Storages</li>
-                  <li> <i class="icon icon-check-2-2"></i> Custom Domain Names</li>
-                  <li> <i class="icon icon-check-2-2"></i>Unlimited Emails</li>
+                  <li> <i class="icon icon-check-2-2"></i> 256 multi-tracking</li>
+                  <li> <i class="icon icon-check-2-2"></i> Upto 192kHz of sampling</li>
+                  <li> <i class="icon icon-check-2-2"></i> Collaboration with 5 others</li>
+                  <li> <i class="icon icon-check-2-2"></i> Unlimited templates</li>
+                  <li> <i class="icon icon-check-2-2"></i> Advanced plugins included</li>
+                  <li> <i class="icon icon-check-2-2"></i> 10GB cloud storage</li>
                 </ul>
               </div>
               <div class="price-btn">
-                <a class="btn" href="#">Start free 14 days trial</a>
-                <p>No credit card required</p>
+                <a class="btn" href="#">Get your license now</a>
               </div>
             </div>
           </div>
