--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
           <div class="row align-items-center">
             <div class="col-lg-4 col-md-4">
               <div class="copyright">
-                <p> &copy; Grayic 2020 All right reserved. </p>
+                <p> &copy; Clintmadeit 2023 All right reserved. </p>
               </div>
             </div>
             <div class="col-lg-5 col-md-6">
@@ -509,9 +509,9 @@
             <div class="col-lg-3 col-md-2">
               <div class="social-icons text-md-end">
                 <ul class="pl-0 list-unstyled">
-                  <li class="d-inline-block"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                  <li class="d-inline-block"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                  <li class="d-inline-block"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                  <li class="d-inline-block"><a href="https://web.facebook.com/clintTeque"><i class="fab fa-facebook-f"></i></a></li>
+                  <li class="d-inline-block"><a href="https://twitter.com/clintmadeit"><i class="fab fa-twitter"></i></a></li>
+                  <li class="d-inline-block"><a href="https://www.linkedin.com/in/johnclinton-luseno-737531164/"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
               </div>
             </div>
