--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
             <div class="row align-items-center justify-content-center">
               <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-8 order-lg-1 order-1" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
                 <div class="content section-heading-11">
-                  <h2> Where it all began </h2>
+                  <h2> About Clint Tools DAW </h2>
                   <p>For so many years, Kenya and many other African countries have relied on 
-                    forign countries for software among them being DAWs (Digital AUdio Workstations) 
+                    forign countries for software among them being DAWs (Digital Audio Workstations) 
                     I thought of this idea of importing audio prouction software and an inspiration came to my 
                     mind abount creating one for Africans with African sounds.</p>
                     <p>Having interacted with a good number of other DAWs and having studied audio engineering 
@@ -214,6 +214,11 @@
                       <p>In my team, I needed a graphics designer, a historian sound engineer, an instrumentalist audio engineer 
                         and another software engineer (back-end developer) to assist with the work. Nyarangi Tirimba came in as our historian engineer, 
                       Morgan Ambani as the instrumentalist audio engineer, Samuel Siambo as the graphics designer and Tirus as my co-developer. </p>
+                      <p>Clint Tools is therefore a Digital Audio Worskstation that will avail all the African sounds that 
+                        you need for your production. It has taken the team time to walk around and gather information about
+                        our African sounds and african producers needs. We therefore believe this software will change your 
+                        production experience not only for African producers and audio engineers but also for all other music 
+                        music producers and sound engineers. </p>
                   <a href="#" class="btn focus-reset">Learn more about us</a>
                 </div>
               </div>
