--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
     </div>
     <!--Feature Area -->
     <div class="feature-area-l-17 position-relative">
+      <div class="content text-center">
+              <h2>Get to know Features of the DAW</h2>
       <div class="container">
         <div class="row feature-area-l-17-items justify-content-center text-center">
           <div class="col-lg-4 col-md-6 col-sm-9">
