--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
               </div>
               <ul class="site-menu-main">
                 <li class="nav-item nav-item-has-children">
-                  <a href="#" class="nav-link-item drop-trigger">Dropdowns <i class="fas fa-angle-down"></i>
+                  <a href="#" class="nav-link-item drop-trigger">Get your Plan <i class="fas fa-angle-down"></i>
                   </a>
                   <ul class="sub-menu" id="submenu-9">
                     <li class="sub-menu--item">
-                      <a href="#">Dropdown 01</a>
+                      <a href="#">Studio</a>
                     </li>
                     <li class="sub-menu--item">
-                      <a href="#">Dropdown 02</a>
+                      <a href="#">Professional</a>
                     </li>
                     <li class="sub-menu--item">
-                      <a href="#">Dropdown 03</a>
-                    </li>
-                    <li class="sub-menu--item">
-                      <a href="#">Dropdown 04</a>
+                      <a href="#">Ultimate</a>
                     </li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a href="#" class="nav-link-item">Blog</a>
+                  <a href="#feature-area-l-17 position-relative" class="nav-link-item">Features</a>
                 </li>
                 <li class="nav-item">
-                  <a href="https://uxtheme.net/product-support/" class="nav-link-item">Support</a>
+                  <a href="#" class="nav-link-item">About</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#" class="nav-link-item">Support</a>
                 </li>
               </ul>
             </nav>
