--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               Sign in
             </a>
             <a class="start-trail-btn btn focus-reset" href="#">
-              Start your 30 days free trial
+              Try Now
             </a>
           </div>
           <!-- mobile menu trigger -->
@@ -338,7 +338,7 @@
       </div>
     </div>
     <!--Brand Area-->
-    <div class="brand-area-l-17">
+    <!--<div class="brand-area-l-17">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-xl-9 col-lg-11 col-md-12">
@@ -362,9 +362,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
     <!--Testimonial Area-->
-    <div class="testimonial-area-l-17">
+    <!--<div class="testimonial-area-l-17">
       <div class="container">
         <div class="row justify-content-center no-gutters border-collapse-1">
           <div class="col-lg-4 col-md-6 col-sm-9 p-0">
@@ -421,15 +421,15 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
     <!--CTA Area-->
     <div class="cta-area-l-17">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10">
             <div class="d-md-flex justify-content-between text-align-lg-start text-center align-items-center">
-              <h2>Manage your team in one place</h2>
-              <a href="#" class="btn">Start free 14 days trial</a>
+              <h2>Produce, Mix and Master with just one DAW</h2>
+              <a href="#" class="btn">Start your 30 days trial</a>
             </div>
           </div>
         </div>
