updated feature and about

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a href="#feature-area-l-17 position-relative" class="nav-link-item">Features</a>
+                  <a href="#feature" class="nav-link-item">Features</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#" class="nav-link-item">About</a>
+                  <a href="#about" class="nav-link-item">About</a>
                 </li>
                 <li class="nav-item">
-                  <a href="#" class="nav-link-item">Support</a>
+                  <a href="#support" class="nav-link-item">Support</a>
                 </li>
               </ul>
             </nav>
@@ -125,7 +125,7 @@
       </div>
     </div>
     <!--Feature Area -->
-    <div class="feature-area-l-17 position-relative">
+    <div id="feature" class="feature-area-l-17 position-relative">
       <div class="content text-center">
               <h2>Get to know Features of the DAW</h2>
       <div class="container">
@@ -195,14 +195,24 @@
       </div>
     </div>
     <!--Content Area 2-->
-    <div class="content-area-l-17-2">
+    <div id="about" class="content-area-l-17-2">
       <div class="container">
-        <div class="row align-items-center justify-content-center">
-          <div class="col-xl-10 col-lg-12">
-            <div class="row align-items-center justify-content-center">
-              <div class="col-xxl-5 col-xl-6 col-lg-6 col-md-8 order-lg-1 order-1" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
+        <div class="align-items-center justify-content-center">
+          <div class="">
+            <div class="align-items-center justify-content-center">
+              <div class="order-lg-1 order-1" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
                 <div class="content section-heading-11">
                   <h2> About Clint Tools DAW </h2>
+                  <div class="offset-xxl-1 col-xxl-6 col-xl-6 col-lg-6 col-md-8 order-lg-1 order-0 py-2" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
+                <div class="content-img position-relative">
+                  <div class="image-1">
+                    <img src="image/l8/content-image-3.png" alt="">
+                  </div>
+                  <div class="image-2">
+                    <img src="image/l8/content-image-4.png" alt="">
+                  </div>
+                </div>
+              </div>
                   <p>For so many years, Kenya and many other African countries have relied on 
                     forign countries for software among them being DAWs (Digital Audio Workstations) 
                     I thought of this idea of importing audio prouction software and an inspiration came to my 
@@ -214,8 +224,8 @@
                       compiling them, I had to look for a team to work with as this would involve a lot of work that on my own 
                       wouldn't be so easy. </p>
                       <p>In my team, I needed a graphics designer, a historian sound engineer, an instrumentalist audio engineer 
-                        and another software engineer (back-end developer) to assist with the work. Nyarangi Tirimba came in as our historian engineer, 
-                      Morgan Ambani as the instrumentalist audio engineer, Samuel Siambo as the graphics designer and Tirus as my co-developer. </p>
+                        and another software engineer (back-end developer) to assist with the work.<a href="http://">Nyarangi Tirimba</a> came in as our historian engineer, 
+                      Morgan Ambani as the instrumentalist audio engineer, <a href="http://">Samuel Siambo</a> as the graphics designer and <a href="http://github.com/Tendwa-T">Tirus Tendwa</a>  as my co-developer. </p>
                       <p>Clint Tools is therefore a Digital Audio Worskstation that will avail all the African sounds that 
                         you need for your production. It has taken the team time to walk around and gather information about
                         our African sounds and african producers needs. We therefore believe this software will change your 
@@ -224,16 +234,7 @@
                   <a href="#" class="btn focus-reset">Learn more about us</a>
                 </div>
               </div>
-              <div class="offset-xxl-1 col-xxl-6 col-xl-6 col-lg-6 col-md-8 order-lg-1 order-0" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
-                <div class="content-img position-relative">
-                  <div class="image-1">
-                    <img src="image/l8/content-image-3.png" alt="">
-                  </div>
-                  <div class="image-2">
-                    <img src="image/l8/content-image-4.png" alt="">
-                  </div>
-                </div>
-              </div>
+              
             </div>
           </div>
         </div>
