updated about content and feature-click

--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
     <!--Content Area 2-->
     <div id="about" class="content-area-l-17-2">
       <div class="container">
-        <div class="align-items-center justify-content-center">
-          <div class="">
-            <div class="align-items-center justify-content-center">
+        <div class="row align-items-center justify-content-center">
+          <div class="col-xl-10 col-lg-12">
+            <div class="row align-items-center justify-content-center">
               <div class="order-lg-1 order-1" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
                 <div class="content section-heading-11">
                   <h2> About Clint Tools DAW </h2>
