--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <div class="video-content text-center">
               <a data-fancybox="" href="https://www.youtube.com/embed/9yc1lfFZX-I"><i
               class="fas fa-play font-size-7"></i></a>
-              <h2>Make use of our professionally pre-made templates</h2>
+              <h2>Make use of our professionally pre-made templates.</h2>
               <p>Just a beginner music producer? No worries, we got you. With our pre-made templates, 
                 you can create hit songs of the genre of your choice. Just choose your genre and select a templates 
                 to guide you through the process. </p>
