Ammend Tendwa updates

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                                 </div>
                                 <div class="flex-column">
                                   <h5>Morgan Ambani</h5>
-                                  <span>Historian engineer</span>
+                                  <span>Sound engineer</span>
                                   <ul>
                                     <l1><i class="icon icon-logo-twitter"></i><a href="" >Morgan Ambani-twitter</a></l1><br>
                                     <l1><i class="icon icon-at-sign-2"></i><a href="">Morgan Ambani-github</a> </l1><br>
@@ -378,7 +378,7 @@
               <p>Perfect choice for producers, sound designers and engineers</p>
               <div class="price-body">
                 <ul class="pricing-list list-unstyled">
-                  <li> <i class="icon icon-check-2-2"></i> 256 multi-tracking</li>
+                  <li> <i class="icon icon-check-2-2"></i> 256 multi-track recording</li>
                   <li> <i class="icon icon-check-2-2"></i> Upto 192kHz of sampling</li>
                   <li> <i class="icon icon-check-2-2"></i> Collaboration with 5 others</li>
                   <li> <i class="icon icon-check-2-2"></i> Unlimited templates</li>
