--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
     </div>
     <!--Content Area 2-->
     <div id="about" class="content-area-l-17-2">
+      <style>
+        .content-area-l-17-2 {
+          background-color: #86879748;
+        }
+      </style>
       <div class="container">
         <div class="row align-items-center justify-content-center">
           <div class="col-xl-10 col-lg-12">
@@ -296,6 +301,8 @@
         </div>
       </div>
     </div>
+    <div style="padding: 5px; background: #faffff;">
+</div>
     <!--Video Area-->
     <div class="video-area-l-17">
       <div class="container">
